# klib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: kbtea.h  kcensor.h  kcrc32.h  ksection.h  kserialization.h  kserializer.h  kstream.h  kstrutil.h  kvariant.h
scripts/: gen_vs2015project.bat  gen_vs2017project.bat  update_vsproject.bat
src/: kbtea.cpp  kcensor.cpp  kcrc32.cpp  kserializer.cpp  kstream.cpp  kvariant.cpp
test/: CMakeLists.txt
test/serializer/: CMakeLists.txt  main.cpp
test/variant/: CMakeLists.txt  main.cpp
